<resources>
    <string name="app_name">吉他助手</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_metronome_fragment">Hello metronome fragment</string>
    <string name="hello_scale_fragment">Hello scale fragment</string>
    <string name="hello_tuner_fragment">Hello tunner fragment</string>
    <string name="bottom">bottom</string>

    <string name="desc_metronome">节拍器</string>
    <string name="desc_tuner">调音器</string>
    <string name="desc_scale">音阶图</string>

    <string name="desc_start">开始/暂停</string>
    <string name="title_background">title_background</string>

    <string name="free_mode">自由调弦</string>
    <string name="help_mode">辅助调弦</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="spin_options">
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string name="spin_pre">每小节</string>
    <string name="spin_suf">拍</string>
    <string name="speed_default">90</string>
    <string name="speed_suf">BPM</string>
</resources>