<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bottom"
    tools:context=".HomeFragment"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/item_1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal|bottom">
        <ImageView
            android:id="@+id/image_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/metronome_1"
            android:contentDescription="@string/desc_metronome"
            />
        <TextView
            android:id="@+id/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_metronome"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal|bottom">
        <ImageView
            android:id="@+id/image_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tuner_1"
            android:contentDescription="@string/desc_tuner" />
        <TextView
            android:id="@+id/text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_tuner"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/image_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/scale_1"
            android:contentDescription="@string/desc_scale" />
        <TextView
            android:id="@+id/text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_scale"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>